--- a/index.html
+++ b/index.html
@@ -1,48 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ accordion</title>
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./main.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <script defer type="module" src="./main.js"></script>
 
-  FAQs
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  What is Frontend Mentor, and how will it help me?
+    <title>Frontend Mentor | FAQ accordion</title>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 1rem;
+        text-align: center;
+      }
+      .attribution a {
+        color: var(--clr-purple-600);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <article class="faq" id="faq-accordion">
+        <header>
+          <img src="./assets/images/icon-star.svg" alt="Icon of star" />
+          <h1>FAQs</h1>
+        </header>
 
-  Is Frontend Mentor free?
+        <dl class="accordion">
+          <dt tabindex="0">
+            What is Frontend Mentor, and how will it help me?
+            <button
+              class="accordion--toggle"
+              type="button"
+              aria-expanded="false"
+              aria-controls="faq1"
+              id="faq1-button"
+            ></button>
+          </dt>
+          <dd
+            id="faq1"
+            role="region"
+            aria-labelledby="faq1-button"
+            aria-hidden="true"
+            class="content"
+          >
+            Frontend Mentor offers realistic coding challenges to help
+            developers improve their frontend coding skills with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal
+            for portfolio building.
+          </dd>
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
+          <dt tabindex="0">
+            Is Frontend Mentor free?
+            <button
+              class="accordion--toggle"
+              type="button"
+              aria-expanded="false"
+              aria-controls="faq2"
+              id="faq2-button"
+            ></button>
+          </dt>
+          <dd
+            id="faq2"
+            role="region"
+            aria-labelledby="faq2-button"
+            aria-hidden="true"
+            class="content"
+          >
+            Yes, Frontend Mentor offers both free and premium coding challenges,
+            with the free option providing access to a range of projects
+            suitable for all skill levels.
+          </dd>
 
-  Can I use Frontend Mentor projects in my portfolio?
+          <dt tabindex="0">
+            Can I use Frontend Mentor projects in my portfolio?
+            <button
+              class="accordion--toggle"
+              type="button"
+              aria-expanded="false"
+              aria-controls="faq3"
+              id="faq3-button"
+            ></button>
+          </dt>
+          <dd
+            id="faq3"
+            role="region"
+            aria-labelledby="faq3-button"
+            aria-hidden="true"
+            class="content"
+          >
+            Yes, you can use projects completed on Frontend Mentor in your
+            portfolio. It's an excellent way to showcase your skills to
+            potential employers!
+          </dd>
 
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
+          <dt tabindex="0">
+            How can I get help if I'm stuck on a Frontend Mentor challenge?
+            <button
+              class="accordion--toggle"
+              type="button"
+              aria-expanded="true"
+              aria-controls="faq4"
+              id="faq4-button"
+            ></button>
+          </dt>
+          <dd
+            id="faq4"
+            role="region"
+            aria-labelledby="faq4-button"
+            aria-hidden="true"
+            class="content"
+          >
+            The best place to get help is inside Frontend Mentor's Discord
+            community. There's a help channel where you can ask questions and
+            seek support from other community members.
+          </dd>
+        </dl>
+      </article>
+    </main>
 
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Barrie Freyre</a>.
+    </footer>
+  </body>
 </html>
