add span for button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
               aria-expanded="false"
               aria-controls="faq1"
               id="faq1-button"
-            ></button>
+            >
+              <span class="sr-only"
+                >Toggle for "What is Frontend Mentor, and how will it help
+                me?"</span
+              >
+            </button>
           </dt>
           <dd
             id="faq1"
@@ -75,7 +80,9 @@
               aria-expanded="false"
               aria-controls="faq2"
               id="faq2-button"
-            ></button>
+            >
+              <span class="sr-only">Toggle for "Is Frontend Mentor free?"</span>
+            </button>
           </dt>
           <dd
             id="faq2"
@@ -97,7 +104,12 @@
               aria-expanded="false"
               aria-controls="faq3"
               id="faq3-button"
-            ></button>
+            >
+              <span class="sr-only"
+                >Toggle for "Can I use Frontend Mentor projects in my
+                portfolio?"</span
+              >
+            </button>
           </dt>
           <dd
             id="faq3"
@@ -119,7 +131,12 @@
               aria-expanded="true"
               aria-controls="faq4"
               id="faq4-button"
-            ></button>
+            >
+              <span class="sr-only"
+                >Toggle for "How can I get help if I'm stuck on a Frontend
+                Mentor challenge?"</span
+              >
+            </button>
           </dt>
           <dd
             id="faq4"
