remove role='region' for dd

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./main.css" />
 
-    <script defer type="module" src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 
     <link
       rel="icon"
@@ -61,7 +61,6 @@
           </dt>
           <dd
             id="faq1"
-            role="region"
             aria-labelledby="faq1-button"
             aria-hidden="true"
             class="content"
@@ -86,7 +85,6 @@
           </dt>
           <dd
             id="faq2"
-            role="region"
             aria-labelledby="faq2-button"
             aria-hidden="true"
             class="content"
@@ -113,7 +111,6 @@
           </dt>
           <dd
             id="faq3"
-            role="region"
             aria-labelledby="faq3-button"
             aria-hidden="true"
             class="content"
@@ -140,7 +137,6 @@
           </dt>
           <dd
             id="faq4"
-            role="region"
             aria-labelledby="faq4-button"
             aria-hidden="true"
             class="content"
