--- a/index.html
+++ b/index.html
@@ -3,6 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="author" content="Barrie Freyre" />
+
+    <meta name="linkedin" content="https://www.linkedin.com/in/barriefreyre/" />
+    <meta name="github" content="https://github.com/barriedirk" />
+    <meta
+      name="frontendmentor"
+      content="https://www.frontendmentor.io/profile/barriedirk"
+    />
+
+    <link rel="me" href="https://www.linkedin.com/in/barriefreyre/" />
+    <link rel="me" href="https://github.com/barriedirk" />
+    <link rel="me" href="https://www.frontendmentor.io/profile/barriedirk" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Barrie Freyre",
+        "url": "",
+        "sameAs": [
+          "https://www.linkedin.com/in/barriefreyre/",
+          "https://github.com/barriedirk",
+          "https://www.frontendmentor.io/profile/barriedirk"
+        ]
+      }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -152,11 +180,13 @@
     <footer class="attribution">
       Challenge by
       <a
-        href="https://www.frontendmentor.io?ref=challenge"
+        href="https://www.frontendmentor.io/profile/barriedirk/solutions"
         target="_blank"
-        rel="noopener noreferrer"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Barrie Freyre</a>.
+      >. Coded by
+      <a href="https://www.linkedin.com/in/barriefreyre/" target="_blank"
+        >Barrie Freyre</a
+      >.
     </footer>
   </body>
 </html>
